--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@nestjs/config": "^3.2.2",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "connect-timeout": "^1.9.0",
+    "mongoose": "^8.3.4",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
