--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.2",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/mongoose": "^10.0.6",
     "@nestjs/platform-express": "^10.0.0",
+    "class-validator": "^0.14.1",
     "connect-timeout": "^1.9.0",
     "mongoose": "^8.3.4",
     "reflect-metadata": "^0.1.13",
