--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "connect-timeout": "^1.9.0",
     "mongoose": "^8.3.4",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "winston": "^3.13.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
